--- a/package.json
+++ b/package.json
@@ -27,8 +27,40 @@
     "help": "nx help"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
+    "document-register-element": "1.13.1",
+    "@angular/animations": "^8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.0.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/router": "^8.0.0",
+    "@nrwl/angular": "^8.2.0",
+    "core-js": "^2.5.4",
+    "rxjs": "~6.4.0",
+    "zone.js": "^0.9.1"
+  },
   "devDependencies": {
+    "@nrwl/react": "8.2.0",
+    "@types/react": "16.8.4",
+    "@types/react-dom": "16.8.2",
+    "react-testing-library": "6.0.0",
+    "@nrwl/web": "8.2.0",
+    "cypress": "~3.3.1",
+    "@nrwl/cypress": "8.2.0",
+    "@nrwl/jest": "8.2.0",
+    "jest": "24.1.0",
+    "@types/jest": "24.0.9",
+    "ts-jest": "24.0.0",
+    "jest-preset-angular": "7.0.0",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/language-service": "^8.0.0",
+    "@angular-devkit/build-angular": "^0.800.0",
+    "codelyzer": "~5.0.1",
     "@nrwl/workspace": "8.2.0",
     "@types/node": "~8.9.4",
     "dotenv": "6.2.0",
