--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,224 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "",
-  "projects": {},
+  "projects": {
+    "angularapp": {
+      "projectType": "application",
+      "schematics": {},
+      "root": "apps/angularapp",
+      "sourceRoot": "apps/angularapp/src",
+      "prefix": "reactangular",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/apps/angularapp",
+            "index": "apps/angularapp/src/index.html",
+            "main": "apps/angularapp/src/main.ts",
+            "polyfills": "apps/angularapp/src/polyfills.ts",
+            "tsConfig": "apps/angularapp/tsconfig.app.json",
+            "assets": [
+              "apps/angularapp/src/favicon.ico",
+              "apps/angularapp/src/assets"
+            ],
+            "styles": ["apps/angularapp/src/styles.css"],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "apps/angularapp/src/environments/environment.ts",
+                  "with": "apps/angularapp/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "angularapp:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "angularapp:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "angularapp:build"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/angularapp/tsconfig.app.json",
+              "apps/angularapp/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!apps/angularapp/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "apps/angularapp/jest.config.js",
+            "tsConfig": "apps/angularapp/tsconfig.spec.json",
+            "setupFile": "apps/angularapp/src/test-setup.ts"
+          }
+        }
+      }
+    },
+    "angularapp-e2e": {
+      "root": "apps/angularapp-e2e",
+      "sourceRoot": "apps/angularapp-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/angularapp-e2e/cypress.json",
+            "tsConfig": "apps/angularapp-e2e/tsconfig.e2e.json",
+            "devServerTarget": "angularapp:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "angularapp:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": "apps/angularapp-e2e/tsconfig.e2e.json",
+            "exclude": ["**/node_modules/**", "!apps/angularapp-e2e/**"]
+          }
+        }
+      }
+    },
+    "reactapp": {
+      "root": "apps/reactapp",
+      "sourceRoot": "apps/reactapp/src",
+      "projectType": "application",
+      "schematics": {},
+      "architect": {
+        "build": {
+          "builder": "@nrwl/web:build",
+          "options": {
+            "outputPath": "dist/apps/reactapp",
+            "index": "apps/reactapp/src/index.html",
+            "main": "apps/reactapp/src/main.tsx",
+            "polyfills": "apps/reactapp/src/polyfills.ts",
+            "tsConfig": "apps/reactapp/tsconfig.app.json",
+            "assets": [
+              "apps/reactapp/src/favicon.ico",
+              "apps/reactapp/src/assets"
+            ],
+            "styles": ["apps/reactapp/src/styles.css"],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "apps/reactapp/src/environments/environment.ts",
+                  "with": "apps/reactapp/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@nrwl/web:dev-server",
+          "options": {
+            "buildTarget": "reactapp:build"
+          },
+          "configurations": {
+            "production": {
+              "buildTarget": "reactapp:build:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/reactapp/tsconfig.app.json",
+              "apps/reactapp/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!apps/reactapp/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "apps/reactapp/jest.config.js",
+            "tsConfig": "apps/reactapp/tsconfig.spec.json"
+          }
+        }
+      }
+    },
+    "reactapp-e2e": {
+      "root": "apps/reactapp-e2e",
+      "sourceRoot": "apps/reactapp-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/reactapp-e2e/cypress.json",
+            "tsConfig": "apps/reactapp-e2e/tsconfig.e2e.json",
+            "devServerTarget": "reactapp:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "reactapp:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": "apps/reactapp-e2e/tsconfig.e2e.json",
+            "exclude": ["**/node_modules/**", "!apps/reactapp-e2e/**"]
+          }
+        }
+      }
+    }
+  },
   "cli": {
     "warnings": {
       "typescriptMismatch": false,
@@ -15,6 +232,9 @@
       "unitTestRunner": "jest",
       "e2eTestRunner": "cypress"
     },
-    "@nrwl/angular:library": { "unitTestRunner": "jest" }
-  }
+    "@nrwl/angular:library": {
+      "unitTestRunner": "jest"
+    }
+  },
+  "defaultProject": "angularapp"
 }
