--- a/nx.json
+++ b/nx.json
@@ -7,5 +7,18 @@
     "tslint.json": "*",
     "nx.json": "*"
   },
-  "projects": {}
+  "projects": {
+    "angularapp-e2e": {
+      "tags": []
+    },
+    "angularapp": {
+      "tags": []
+    },
+    "reactapp": {
+      "tags": []
+    },
+    "reactapp-e2e": {
+      "tags": []
+    }
+  }
 }
