--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "concurrently \"ng serve -o angularapp\" \"ng serve reactapp --port 4201\"",
     "build": "ng build",
     "test": "ng test",
     "lint": "nx lint && ng lint",
@@ -45,29 +45,30 @@
     "@nrwl/angular": "^8.2.0"
   },
   "devDependencies": {
-    "@nrwl/react": "8.2.0",
-    "@types/react": "16.8.4",
-    "@types/react-dom": "16.8.2",
-    "react-testing-library": "6.0.0",
-    "jest-preset-angular": "7.0.0",
+    "@angular-devkit/build-angular": "^0.800.0",
+    "@angular/cli": "8.0.0",
     "@angular/compiler-cli": "^8.0.0",
     "@angular/language-service": "^8.0.0",
-    "@angular-devkit/build-angular": "^0.800.0",
-    "codelyzer": "~5.0.1",
-    "@nrwl/web": "8.2.0",
-    "cypress": "~3.3.1",
     "@nrwl/cypress": "8.2.0",
     "@nrwl/jest": "8.2.0",
-    "jest": "24.1.0",
-    "@types/jest": "24.0.9",
-    "ts-jest": "24.0.0",
+    "@nrwl/react": "8.2.0",
+    "@nrwl/web": "8.2.0",
     "@nrwl/workspace": "8.2.0",
+    "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
+    "@types/react": "16.8.4",
+    "@types/react-dom": "16.8.2",
+    "codelyzer": "~5.0.1",
+    "concurrently": "^4.1.1",
+    "cypress": "~3.3.1",
     "dotenv": "6.2.0",
+    "jest": "24.1.0",
+    "jest-preset-angular": "^7.1.1",
+    "prettier": "1.16.4",
+    "react-testing-library": "6.0.0",
+    "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.4.5",
-    "prettier": "1.16.4",
-    "@angular/cli": "8.0.0"
+    "typescript": "~3.4.5"
   }
 }
