--- a/package.json
+++ b/package.json
@@ -28,23 +28,25 @@
   },
   "private": true,
   "dependencies": {
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
     "@angular/animations": "^8.0.0",
     "@angular/common": "^8.0.0",
     "@angular/compiler": "^8.0.0",
     "@angular/core": "^8.0.0",
+    "@angular/elements": "^8.1.0",
     "@angular/forms": "^8.0.0",
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "@nrwl/angular": "^8.2.0",
     "core-js": "^2.5.4",
-    "rxjs": "~6.4.0",
-    "zone.js": "^0.9.1",
     "document-register-element": "1.13.1",
-    "@nrwl/angular": "^8.2.0"
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
+    "rxjs": "~6.4.0",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
+    "jest-preset-angular": "^7.1.1",
     "@angular-devkit/build-angular": "^0.800.0",
     "@angular/cli": "8.0.0",
     "@angular/compiler-cli": "^8.0.0",
@@ -63,7 +65,6 @@
     "cypress": "~3.3.1",
     "dotenv": "6.2.0",
     "jest": "24.1.0",
-    "jest-preset-angular": "^7.1.1",
     "prettier": "1.16.4",
     "react-testing-library": "6.0.0",
     "ts-jest": "24.0.0",
