--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
               "apps/angularapp/src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "apps/angularapp/src/styles.css"
             ],
             "scripts": [
