--- a/package.json
+++ b/package.json
@@ -29,17 +29,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.0.0",
+    "@angular/cdk": "~8.0.2",
     "@angular/common": "^8.0.0",
     "@angular/compiler": "^8.0.0",
     "@angular/core": "^8.0.0",
     "@angular/elements": "^8.1.0",
     "@angular/forms": "^8.0.0",
+    "@angular/material": "~8.0.2",
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
     "@nrwl/angular": "^8.2.0",
     "core-js": "^2.5.4",
     "document-register-element": "1.13.1",
+    "hammerjs": "^2.0.8",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "rxjs": "~6.4.0",
