--- a/angular.json
+++ b/angular.json
@@ -22,10 +22,7 @@
               "apps/angularapp/src/favicon.ico",
               "apps/angularapp/src/assets"
             ],
-            "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "apps/angularapp/src/styles.css"
-            ],
+            "styles": ["apps/angularapp/src/styles.css"],
             "scripts": [
               {
                 "input": "node_modules/document-register-element/build/document-register-element.js"
